fixed padding on mobile

--- a/styles.css
+++ b/styles.css
@@ -75,9 +75,10 @@ p {
 		/*border:1px solid red;*/
 		width:100%;
 		padding:30px;
+		padding-top:100px;
 	}
 
-	#logo {
+#logo {
 	position: relative;
 	width: 250px;
 	fill: white;
